--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,3 +1,14 @@
-label{
-    margin-right: 25px;
+header{
+    font-size: 25px;
+    text-align: center;
+}
+
+form{
+    padding-left: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    border-left: 6px solid #d2ff00;
+    background-color: #b5bed3;
+    float: left;
 }
